<resources>
    <string name="app_name">CaboClient</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>

    <!-- General Strings -->
    <string name="dummy_content">dummy_content</string>
    <string name="start_game">Start Game</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="loading">Loading...</string>

    <!-- Login/Register Activity Strings -->
    <string name="title_activity_login">Cabo</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_nick">Nickname</string>
    <string name="prompt_displayname">Full name</string>
    <string name="choose_avatar">Choose an Avatar</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="duplicate_user">Nickname already exists</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="invalid_credentials">Username or Password are wrong</string>
    <string name="db_error">DB-Error</string>
    <string name="login_failed">"Login failed"</string>

    <!-- MainActivity Strings -->
    <string name="title_main_activity">Welcome</string>
    <string name="no_account_found">"No matching account found - Please Register"</string>
    <string name="friend_list">"Friends"</string>
    <string name="game_settings">"Game Settings"</string>
    <string name="find_game">"Find Game"</string>
    <string name="add_friend">"Add a Friend"</string>
    <string name="search_friend">Search friend</string>
    <string name="enter_nick">Enter a Nickname</string>
    <string name="search">Search</string>
    <string name="friend_request_received">You received a friend request from </string>
    <string name="party_invitation_received">You received a party invitation</string>

    <!-- Strings for SharedPref -->
    <string name="preference_file_key">user</string>
    <string name="preference_userdbid">userdbid</string>
    <string name="preference_username">username</string>
    <string name="preference_usermail">usermail</string>
    <string name="preference_usernick">usernick</string>
    <string name="preference_useravatar">useravatar</string>
    <string name="preference_global_score">globalscore</string>
    <string name="preference_friendlist">friendlist</string>
    <string name="preference_all_users">all_users</string>
    <string name="preference_music">music</string>
    <string name="preference_music_vol">music_vol</string>
    <string name="preference_sound">sound</string>
    <string name="settings">Settings</string>
    <string name="adjust_max_score">Adjust max Score:</string>
    <string name="licenses">Licenses</string>
    <string name="logout">Logout</string>

</resources>