<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="top">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:text="@string/friend_list" />
        <ListView
            android:id="@+id/list_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_ui"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">
            <Button
                android:id="@+id/add_friend_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_friend"
                />
            <Button
                android:id="@+id/settings_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_settings"
                />
            <Button
                android:id="@+id/start_game_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_game"
                />
            <Button
                android:id="@+id/find_game_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_game"
                />

        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>