<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/cabo_bg"
    tools:context=".LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/particle_animationView_register"
        android:layout_width="400dp"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/particles"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:alpha="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/particle_animationView2_register"
        android:layout_width="400dp"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/particles"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:alpha="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_weight="1"
        android:weightSum="5">

    <TextView
        android:id="@+id/avatar_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="start"
        android:text="@string/choose_avatar"
        android:textSize="16dp"
        android:textColor="@color/beige"
        android:fontFamily="sans-serif-black"
        android:shadowColor="@color/dark_purple"
        android:shadowRadius="15"
        android:shadowDx="5"
        android:shadowDy="5"
        android:layout_weight="0.5"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <LinearLayout
        android:id="@+id/avatar_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_weight="2.2"
        app:layout_constraintTop_toBottomOf="@+id/avatar_text">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/borderAvatar0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar0"
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:padding="6dp"
                    android:src="@drawable/avatar0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/borderAvatar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar1"
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:padding="6dp"
                    android:src="@drawable/avatar1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/borderAvatar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar2"
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:padding="6dp"
                    android:src="@drawable/avatar2" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/borderAvatar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar3"
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:padding="6dp"
                    android:src="@drawable/avatar3" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/borderAvatar4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar4"
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:padding="6dp"
                    android:src="@drawable/avatar4" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/borderAvatar5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar5"
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginBottom="3dp"
                    android:padding="6dp"
                    android:src="@drawable/avatar5" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/cabo_logo"
            android:translationX="-50dp"
            android:paddingTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="bottom"
            android:layout_weight="2"
            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingRight="24dp"
            android:weightSum="8">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="Create an account"
                android:textSize="16dp"
                android:textColor="@color/beige"
                android:fontFamily="sans-serif-black"
                android:shadowColor="@color/dark_purple"
                android:shadowRadius="15"
                android:shadowDx="5"
                android:shadowDy="5"
                android:layout_weight="1"
                android:layout_marginBottom="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:weightSum="4"
                android:orientation="vertical"
                android:padding="6dp"
                android:background="@drawable/rounded_button">

            <EditText
                android:id="@+id/register_mail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColor="@color/beige"
                android:textSize="12dp"
                android:layout_weight="1"
                android:backgroundTint="@color/beige"
                android:theme="@style/MyEditTextTheme"
                android:imeOptions="flagNoFullscreen"
                android:textColorHint="@color/turquoise_highlight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:autofillHints="@string/prompt_displayname"
                android:hint="@string/prompt_displayname"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:textColor="@color/beige"
                android:textSize="12dp"
                android:layout_weight="1"
                android:backgroundTint="@color/beige"
                android:theme="@style/MyEditTextTheme"
                android:imeOptions="flagNoFullscreen"
                android:textColorHint="@color/turquoise_highlight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_mail" />

            <EditText
                android:id="@+id/register_nick"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:autofillHints="@string/prompt_nick"
                android:hint="@string/prompt_nick"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColor="@color/beige"
                android:textSize="12dp"
                android:layout_weight="1"
                android:backgroundTint="@color/beige"
                android:theme="@style/MyEditTextTheme"
                android:imeOptions="flagNoFullscreen"
                android:textColorHint="@color/turquoise_highlight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_name" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:textColor="@color/beige"
                android:textSize="12dp"
                android:backgroundTint="@color/beige"
                android:theme="@style/MyEditTextTheme"
                android:imeOptions="flagNoFullscreen"
                android:textColorHint="@color/turquoise_highlight"
                android:selectAllOnFocus="true"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_nick" />

            </LinearLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/action_register"
                android:layout_weight="1"
                android:background="@drawable/outlined_button"
                android:textColor="@drawable/outlined_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar_layout"
                app:layout_constraintVertical_bias="0.2" />
            <TextView
                android:id="@+id/register_error_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toBottomOf="@id/register_btn"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>